GithubUsers/app/src/main/java/com/example/githubusers/core/domain/errors/NetworkError.kt
package com.example.githubusers.core.domain.errors

class NetworkError : Error()
